@@ -31,17 +31,41 @@ Last-Update: 2012-01-13
  #define BuildDmxDevelTools	NO
 --- a/nx-X11/lib/Xinerama/Xinerama.c
 +++ b/nx-X11/lib/Xinerama/Xinerama.c
-@@ -249,6 +249,9 @@
+@@ -34,7 +34,7 @@
+ #include <X11/extensions/panoramiXext.h>
+ #include <X11/extensions/panoramiXproto.h>
+ #include <X11/extensions/Xinerama.h>
+-
++#include <stdio.h>
+ 
+ static XExtensionInfo _panoramiX_ext_info_data;
+ static XExtensionInfo *panoramiX_ext_info = &_panoramiX_ext_info_data;
+@@ -249,6 +249,16 @@
      xXineramaIsActiveReq  	*req;
      XExtDisplayInfo 		*info = find_display (dpy);
  
 +
-+    return True;
++    FILE* fptr;
++    if((fptr=fopen(getenv("NX_XINERAMA_CONF"),"r"))!=NULL) {
++	fclose (fptr);
++	return True;
++    }
++    else {
++	return False;
++    }
 +
      if(!XextHasExtension(info))
  	return False;  /* server doesn't even have the extension */
  
-@@ -279,39 +282,72 @@
+@@ -266,7 +276,6 @@
+     return rep.state;
+ }
+ 
+-#include <stdio.h>
+ 
+ XineramaScreenInfo * 
+ XineramaQueryScreens(
+@@ -279,39 +288,72 @@
      xXineramaQueryScreensReq	*req;
      XineramaScreenInfo		*scrnInfo = NULL;
  
@@ -186,7 +210,7 @@ Last-Update: 2012-01-13
  	else
  #endif
 -	    result = (ProcXvStopVideo(client)); break;
-+	    result = (ProcXvStopVideo(client)); 
++	    result = (ProcXvStopVideo(client));
 +            break;
      case xv_SetPortAttribute: 
  #ifdef PANORAMIX
